--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ fastapi==0.103.2
 h11==0.14.0
 idna==3.10
 importlib-metadata==6.7.0
+plyvel==1.5.1
 pydantic==2.5.3
 pydantic_core==2.14.6
 sniffio==1.3.1
