--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==8.1.8
 exceptiongroup==1.2.2
 fastapi==0.103.2
 h11==0.14.0
-idna==3.10
+idna<3,>=2.5
 importlib-metadata==6.7.0
 plyvel==1.5.1
 pydantic==2.5.3
@@ -14,3 +14,12 @@ starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.22.0
 zipp==3.15.0
+urllib3<2.0.0
+requests==2.24.0
+boto3==1.26.89
+cbor2==5.2.0
+cose==0.9.dev2
+cryptography==42.0.4
+pycryptodome==3.19.1
+pyOpenSSL>=22.0.0
+python-multipart==0.0.5
