--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7"
+axum = "0.8.4"
 dashmap = "5.5"
 ecies = "0.2"
 futures = "0.3"
@@ -18,3 +18,7 @@ tower = "0.4"
 tower-http = { version = "0.5", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }
+tiny-keccak = "2.0.2"
+alloy = { version = "0.15", default-features = false }
+alloy-primitives = "1.1.2"
