--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ rand = "0.8"
 secp256k1 = "0.28"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_bytes = "0.11"
 thiserror = "1.0"
 tokio = { version = "1.36", features = ["full"] }
 tower = "0.4"
@@ -22,3 +23,4 @@ dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dsta
 tiny-keccak = "2.0.2"
 alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
+sled = "0.34"
