--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ tiny-keccak = "2.0.2"
 alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
 sled = "0.34"
+rstest = "0.20.0"
+http-body-util = "0.1.0"
