--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ alloy-primitives = "1.1.2"
 sled = "0.34"
 rstest = "0.20.0"
 http-body-util = "0.1.0"
+uuid = {version = "=1.8.0" , features = ["v4","fast-rng","macro-diagnostics", "serde"]}
