--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "encifher-encryption-service"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+    "keygen",
+    "keygen/keys",
+    "keygen/utils",
+    "keygen/theta_proto"]
+
 [dependencies]
 axum = "0.8.4"
 dashmap = "5.5"
@@ -13,7 +20,7 @@ secp256k1 = "0.28"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_bytes = "0.11"
-thiserror = "1.0"
+keygen = { path = "keygen", version = "0.1.0" }
 tokio = { version = "1.36", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["trace"] }
@@ -24,3 +31,6 @@ tiny-keccak = "2.0.2"
 alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
 sled = "0.34"
+
+thiserror = "1.0.49"
+
