--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 members = [
     "keygen",
     "keygen/keys",
-    "keygen/utils",
     "keygen/theta_proto"]
 
 [dependencies]
 axum = "0.8.4"
 dashmap = "5.5"
+
 ecies = "0.2"
 futures = "0.3"
 rand = "0.8"
@@ -31,6 +31,6 @@ tiny-keccak = "2.0.2"
 alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
 sled = "0.34"
-
 thiserror = "1.0.49"
-
+rstest = "0.20.0"
+http-body-util = "0.1.0"
