--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,38 +1,27 @@
-[package]
-name = "encifher-encryption-service"
-version = "0.1.0"
-edition = "2021"
+
 
 [workspace]
 members = [
     "keygen",
-    "keygen/keys",
-    "keygen/theta_proto"]
+    "keys",
+    "proto", 
+    "service"]
+resolver = "2"
 
-[dependencies]
-axum = "0.8.4"
-dashmap = "5.5"
-
-ecies = "0.2"
-futures = "0.3"
-rand = "0.8"
-secp256k1 = "0.28"
+[workspace.dependencies]
+# Common versions used across packages
+tokio = { version = "1.36", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_bytes = "0.11"
-keygen = { path = "keygen", version = "0.1.0" }
-tokio = { version = "1.36", features = ["full"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = ["trace"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }
-tiny-keccak = "2.0.2"
-alloy = { version = "0.15", default-features = false }
-alloy-primitives = "1.1.2"
-sled = "0.34"
-
+rand = "0.8"
 thiserror = "1.0.49"
-
-rstest = "0.20.0"
-http-body-util = "0.1.0"
+base64 = "0.21.5"
+log = "0.4.17"
+k256 = "0.13.2"
+sha2 = "0.10.8"
+futures = "0.3"
+prost = "0.11"
+tonic = "0.8"
+keygen = { path = "keygen", version = "0.1.0" }
+keys = { path = "keys", version = "0.1.0" }
+proto = { path = "proto", version = "0.1.0" }
