--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,20 @@ alloy-primitives = "1.1.2"
 sled = "0.34"
 rstest = "0.20.0"
 http-body-util = "0.1.0"
+async-trait = "0.1"
+libp2p = { version = "0.53", features = [
+    "tcp",
+    "noise",
+    "yamux",
+    "gossipsub",
+    "mdns",
+    "request-response",
+    "identify",
+    "kad",
+    "macros",
+    "tokio",
+    "ping",
+] }
+lazy_static = "1.4"
+anyhow = "1.0.98"
+bincode = "1.3.3"
