--- a/.github/workflows/cargo_test.yml
+++ b/.github/workflows/cargo_test.yml
@@ -39,8 +39,8 @@ jobs:
        echo "export DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
        ./dstack-simulator &
 
-    # - name: Clippy
-    #   run: cargo clippy -- -D warnings
+    - name: Build project
+      run: cargo build --all-features
 
     - name: Run tests
-      run: cargo test --all-features
+      run: RUST_LOG=info cargo test -- --test-threads=1 --nocapture --all-features
