--- a/.github/workflows/cargo_test.yml
+++ b/.github/workflows/cargo_test.yml
@@ -42,5 +42,8 @@ jobs:
     - name: Build project
       run: cargo build --all-features
 
+    - name: list dirs
+      run: cd target/debug && ls -la
+
     - name: Run tests
-      run: RUST_LOG=info cargo test -- --test-threads=1 --nocapture --all-features
+      run: RUST_LOG=info cargo test -- --test-threads=1 --nocapture
