--- a/.github/workflows/cargo_test.yml
+++ b/.github/workflows/cargo_test.yml
@@ -15,15 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+      with:
+        submodules: recursive
+        token: ${{ secrets.GH_TOKEN }}
+
     - name: Install Rust toolchain
       uses: dtolnay/rust-toolchain@stable
       with:
         components: rustfmt, clippy
-    
+
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2
-    
+
     - name: Check formatting
       run: cargo fmt --all -- --check
 
@@ -32,18 +35,17 @@ jobs:
       with:
         repository: Dstack-TEE/dstack
         path: dstack
-    
+
     - name: Build and Setup dstack
       run: |
-       cd dstack/sdk/simulator && ./build.sh
-       echo "export DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
-       ./dstack-simulator &
+        cd dstack/sdk/simulator && ./build.sh
+        echo "export DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
+        ./dstack-simulator &
 
     - name: Build enigma kms node & copy binary
       run: |
-       git submodule update --init --recursive
-       cd enigma-kms-node && cargo build --features persistent-connection
-       cd .. && cp enigma-kms-node/target/debug/enigma-kms-node target/debug/enigma-kms-node
+        cd enigma-kms-node && cargo build --features persistent-connection
+        cd .. && cp enigma-kms-node/target/debug/enigma-kms-node target/debug/enigma-kms-node
 
     - name: list dirs
       run: cd target/debug && ls -la
