--- a/.github/workflows/cargo_test.yml
+++ b/.github/workflows/cargo_test.yml
@@ -28,15 +28,15 @@ jobs:
       run: cargo fmt --all -- --check
 
     - name: Clone Dstack-TEE/dstack repo
-        uses: actions/checkout@v4
-        with:
-          repository: Dstack-TEE/dstack
-          path: dstack
+      uses: actions/checkout@v4
+      with:
+        repository: Dstack-TEE/dstack
+        path: dstack
     
     - name: Build and Setup dstack
       run: |
        cd dstack/sdk/simulator && ./build.sh
-       echo "export DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
+       echo "DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
        ./dstack-simulator &
 
     # - name: Clippy
