--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -34,6 +34,7 @@ alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
 sled = "0.34"
 vsss_rs_std = { version = "3.0.0-pre4", package = "vsss-rs-std" }
+k256 = { workspace = true }
 
 [dev-dependencies]
 rstest = "0.20.0"
