feat : refactored traits and types

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,25 @@
-# ===========================
-# P2P Env Vars 
-# ===========================
+# Server Configuration
+SERVER_HOST=0.0.0.0
+SERVER_PORT=3000
 
-P2P_NODE_PORT= # Port number for P2P protocol to communicate on
-P2P_PROTOCOL_NAME= # Name of P2P protocol to connect to, Eg: "/enigma-kms-p2p/message/1.0.0"
-P2P_IDENTIFY_PROTOCOL_VERSION= # Name of the identify protocol initialized, Eg: "/encrypted-network/1.0.0"
+# P2P Network Configuration
+P2P_PORT=3001
+P2P_NODE_NAME=encryption-service-node
+P2P_PROTOCOL_NAME=/enigma-kms-p2p/message/1.0.0
+P2P_IDENTIFY_PROTOCOL_VERSION=/enigma-encrypted-network/1.0.0
+
+# Worker Configuration
+SHARD_REQUEST_INTERVAL_SECS=5
+SHARD_REQUEST_RETRY_COUNT=5
+SHARD_CLEANUP_INTERVAL_HOURS=6
+JOB_QUEUE_SIZE=1000
+
+# Database Configuration
+DATABASE_PATH=keystore_db
+
+# Logging Configuration (optional)
+RUST_LOG=info
+RUST_BACKTRACE=1
+
+# Development Configuration (optional)
+RUST_ENV=development
