--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ P2P_PORT=3001
 P2P_NODE_NAME=encryption-service-node
 P2P_PROTOCOL_NAME=/enigma-kms-p2p/message/1.0.0
 P2P_IDENTIFY_PROTOCOL_VERSION=/enigma-encrypted-network/1.0.0
+NUMBER_OF_P2P_NETWORK_NODES=4
 
 # Worker Configuration
 SHARD_REQUEST_INTERVAL_SECS=5
