--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "enigma-kms-node"]
 	path = enigma-kms-node
 	url = https://github.com/RizeLabs/enigma-kms-node
-	branch = main
+	branch = deploy
