--- a/.github/workflows/cargo_test.yml
+++ b/.github/workflows/cargo_test.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build and Setup dstack
       run: |
        cd dstack/sdk/simulator && ./build.sh
-       echo "DSTACK_SIMULATOR_ENDPOINT=$(pwd)/dstack.sock" >> $GITHUB_ENV
+       echo "TAPPD_SIMULATOR_ENDPOINT=$(pwd)/tappd.sock" >> $GITHUB_ENV
        ./dstack-simulator &
 
     - name: Build enigma kms node
