--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tonic = { workspace = true }
-prost = { workspace = true }
-serde = { workspace = true }
+prost = "0.11"
+tonic = "0.8"
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.8"
