--- a/keygen/Cargo.toml
+++ b/keygen/Cargo.toml
@@ -18,6 +18,7 @@ k256 = { workspace = true }
 sha2 = { workspace = true }
 futures = { workspace = true }
 hex = "0.4.3"
+uuid = {workspace = true}
 log = "0.4"
 log4rs = "1.2" 
 
