--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -12,6 +12,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 base64 = { workspace = true }
+uuid = {workspace=true}
 serde_json = { workspace = true }
 prost = { workspace = true }
 crypto-bigint = "0.5"
