--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ ecies = "0.2"
 secp256k1 = "0.28"
 rustls = { version = "0.23.34", features = ["ring"] }
 rustls-pemfile = "2.2.0"
+dotenv = "0.15.0"
 
 [dev-dependencies]
 rstest = "0.20.0"
