--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 [package]
 name = "enigma-da"
 version = "0.0.7"
-edition = "2024"
+edition = "2021"
 
 
 [dependencies]
@@ -15,7 +15,7 @@ tower-http = { version = "0.5", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }
-tiny-keccak = "2.0.2"
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 alloy = { version = "0.15", default-features = false }
 alloy-primitives = "1.1.2"
 rstest = "0.20.0"
@@ -43,6 +43,10 @@ secp256k1 = "0.28"
 rustls = { version = "0.23.34", features = ["ring"] }
 rustls-pemfile = "2.2.0"
 dotenv = "0.15.0"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
+chrono = "0.4"
+hex = "0.4"
+sha3 = "0.10"
 
 [dev-dependencies]
 rstest = "0.20.0"
