--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,4 +1,3 @@
-
 FROM rustlang/rust:nightly-bookworm as builder
 
 # Install system dependencies
@@ -13,8 +12,8 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /usr/src/app
 COPY . .
 
-# Install dependencies and build
-RUN cargo build --release
+# Install dependencies and build in DEBUG mode
+RUN cargo build
 
 # Create a smaller runtime image
 FROM debian:bookworm-slim
@@ -28,28 +27,20 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-ARG SERVER_PORT
-ARG SERVER_HOST
-ARG CA_CERT
-ARG SERVER_CERT
-ARG SERVER_KEY
-
-ENV SERVER_PORT=${SERVER_PORT}
-ENV SERVER_HOST=${SERVER_HOST}
-ENV CA_CERT=${CA_CERT}
-ENV SERVER_CERT=${SERVER_CERT}
-ENV SERVER_KEY=${SERVER_KEY}
-
 # Create data directory with proper permissions
 RUN mkdir -p /app/data && chmod 777 /app/data
+# Create certs directory for mounted certificate files
+RUN mkdir -p /app/certs
 
-# Copy the built binaries from builder
-COPY --from=builder /usr/src/app/target/release/enigma-da /app/enigma-da
+# Copy the DEBUG binary from builder
+COPY --from=builder /usr/src/app/target/debug/enigma-da /app/enigma-da
 # Copy and set permissions for startup script
 COPY start.sh /app/start.sh
 RUN chmod +x /app/start.sh
 
-ENV RUST_LOG=info
-ENV RUST_BACKTRACE=1
+ENV RUST_LOG=debug
+ENV RUST_BACKTRACE=full
+ENV SERVER_PORT=3000
+ENV SERVER_HOST=0.0.0.0
 
 CMD ["/app/start.sh"]
